# OpenContext

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  mcp.example.json  package-lock.json  package.json  tailwind.config.js
.cursor/commands/: opencontext-context.md  opencontext-create.md  opencontext-help.md  opencontext-iterate.md  opencontext-search.md
.github/workflows/: ci.yml  native-build.yml
crates/opencontext-core/: Cargo.toml
crates/opencontext-core/src/: events.rs  lib.rs  tests.rs
crates/opencontext-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test-store.js  test.js
crates/opencontext-node/src/: lib.rs
docs/: opencontext_agentic_guide.md  opencontext_command_ideas.md  opencontext_cursor_commands.md  opencontext_cursor_guide.md  opencontext_design.md  opencontext_ui_design.md  rust-core-migration-notes.md
scripts/: api-server.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/core/: agents.js  config.js  native.js  store-native.js
src/core/search/: formatter.js  index.js  indexSync.js  native-adapter.js
src/core/store/: index.js
src/mcp/: server.js
src/ui/: index.html  server.js  tailwind.config.cjs  vite.config.js
src/ui/src/: App.jsx  api.js  index.css  main.jsx  types.js
src/ui/tests/: move.test.cjs  (+2 more)
tests/: helpers.js
tests/core/: config.test.js
tests/integration/: cli.test.js
tests/native/: native-adapter.test.js  store-native.test.js
tests/search/: formatter.test.js
(+43 files in other folders)
