[package]
name = "opencontext-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi6", "serde-json", "async"] }
napi-derive = "2"
once_cell = "1"
opencontext-core = { path = "../opencontext-core", features = ["search"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"

[build-dependencies]
napi-build = "2"
